--- a/aws.yml
+++ b/aws.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   vars:
-    access: AKIAVVSMU3GDKAXV6W65
-    secret: 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
+    access: 
+    secret: 
     region: us-west-1
   tasks:
     - ec2_vpc_net:
